# ai-lab

./: .cursorignore  README.md  langchain_modell_access.py  mise.toml  pyproject.toml
.uv/: config.tpml
src/langchain/: agent.py  simple_access.py
src/rag/: evaluate_rag.py  simple_rag.py
