[project]
name = "ai-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.1.0",
    "langchain-openai>=0.2.0",
    "ruff>=0.9.10",
    "llm>=0.23",
    "langchain-anthropic>=0.3.9",
    "langchain>=0.3.20",
]
